k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-arena
spec:
  selector:
    app: snake-arena
  ports:
    - name: http
      port: 80
      targetPort: 8085
  type: ClusterIP
